# weathrs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PROMPT.md  config.example.toml  docker-compose.yml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
migrations/: 001_create_tables.sql  002_create_history_table.sql  003_create_geocoding_cache.sql  004_add_location_key.sql  005_create_tile_usage.sql
ralph/: RALPH-PRD-STATS.md  RALPH-PROGRESS.md
src/: api_budget.rs  cache.rs  config.rs  error.rs  extractors.rs  main.rs  metrics.rs  openapi.rs  routes.rs  stats.rs
src/air_quality/: handlers.rs  mod.rs  models.rs  service.rs
src/backfill/: mod.rs  runner.rs
src/db/: device_repo.rs  history_repo.rs  job_repo.rs  mod.rs
src/devices/: handlers.rs  mod.rs  models.rs  service.rs  storage.rs
src/forecast/: handlers.rs  mod.rs  models.rs  service.rs
src/geocode/: handlers.rs  models.rs
src/history/: handlers.rs  mod.rs  models.rs  service.rs
src/middleware/: auth.rs  mod.rs
src/notifications/: expo.rs  gotify.rs  mod.rs  ntfy.rs
src/scheduler/: handlers.rs  jobs.rs  mod.rs  service.rs  storage.rs
src/weather/: handlers.rs  mod.rs  service.rs
