[package]
name = "weathrs"
version = "0.1.0"
edition = "2021"
description = "A streamlined Rust weather API using OpenWeatherMap"
authors = ["jsprague84"]

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client for OpenWeatherMap
reqwest = { version = "0.13", features = ["json", "query"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = { version = "0.14", features = ["convert-case"] }

# Scheduling
tokio-cron-scheduler = "0.15"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Environment variables
dotenvy = "0.15"
